infra/k8s/user-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
  namespace: tomsblog
  labels:
    app: user-management
spec:
  type: ClusterIP
  selector:
    app: user-management
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: grpc
      protocol: TCP
      name: grpc
