infra/k8s/user-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management
  namespace: tomsblog
  labels:
    app: user-management
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - blog.tomirgang.de
      secretName: blog-content-tls
  rules:
    - host: blog.tomirgang.de
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-management
                port:
                  name: http
          - path: /login/oauth2/code
            pathType: Prefix
            backend:
              service:
                name: user-management
                port:
                  name: http
