infra/k8s/user-management/authz-policy-grpc.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-blog-content-to-user-management
  namespace: tomsblog
  labels:
    app: user-management
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: user-management-grpc
  requiredAuthenticationRefs:
    - name: blog-content-identity
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
