infra/k8s/user-management/authz-policy-probes.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-probes-to-user-management
  namespace: tomsblog
  labels:
    app: user-management
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: user-management-http
  requiredAuthenticationRefs:
    - name: kubelet-probes-user-management
      kind: NetworkAuthentication
      group: policy.linkerd.io
